--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <section id="about" class="about section">
         <div class="container">
             <h2 class="title text-center">What is Anarchism?</h2>
-            <p class="intro text-center">Explain your project in detail. Ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+            <p class="intro text-center">무정부주의자들은 원칙이 다소 모호하기는 했지만 특권과 불의에 대한 증오는 정말로 순수했다는 점에서 대다수의 이른바 혁명가들과 대립되었다. 철학적으로 똑같을 수 없다. 공산주의자는 늘 중앙 집권과 효율을 강조한다. 무정부주의자는 자유와 평등을 강조한다.</p>
             <div class="row">
                 <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-holder">
