--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Home</a></li>
                         <li class="nav-item"><a class="scrollto" href="#about">About</a></li>
                         <li class="nav-item"><a class="scrollto" href="#features">Features</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#docs">Docs</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#docs">Proudhon</a></li>
                         <li class="nav-item"><a class="scrollto" href="#license">License</a></li>                        
                         <li class="nav-item last"><a class="scrollto" href="#contact">Contact</a></li>
                     </ul><!--//nav-->
@@ -114,7 +114,7 @@
     <section id="about" class="about section">
         <div class="container">
             <h2 class="title text-center">What is Anarchism?</h2>
-            <p class="intro text-center">무정부주의자들은 원칙이 다소 모호하기는 했지만 특권과 불의에 대한 증오는 정말로 순수했다는 점에서 대다수의 이른바 혁명가들과 대립되었다. 철학적으로 똑같을 수 없다. 공산주의자는 늘 중앙 집권과 효율을 강조한다. 무정부주의자는 자유와 평등을 강조한다.</p>
+            <p class="intro text-center">무정부주의자들은 원칙이 다소 모호하기는 했지만 특권과 불의에 대한 증오는 정말로 순수했다는 점에서 대다수의 이른바 혁명가들과 대립되었다. 철학적으로 똑같을 수 없다. 공산주의자는 늘 중앙 집권과 효율을 강조한다. <br>Anarchist(무정부주의자)는 자유와 평등을 강조한다.</p>
             <div class="row">
                 <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-holder">
@@ -195,22 +195,19 @@
     <section id="docs" class="docs section">
         <div class="container">
             <div class="docs-inner">
-            <h2 class="title text-center">Get Started</h2>            
+            <h2 class="title text-center">Pierre-Joseph Proudhon</h2>            
             <div class="block">
-                <h3 class="sub-title text-center">HTML</h3>
+                <h3 class="sub-title text-center">피에르 조제프 프루동</h3>
                 <p><a href="http://prismjs.com/" target="_blank">PrismJS</a> is used as the syntax highlighter here.</p>
-                <p>Below are the details of the custom PrismJS build used in this template. You can <a href="http://prismjs.com/download.html" target="_blank">build your own version</a> via their website should you need to.</p>
+                <p>프랑스 대혁명을 왕정에 의한 1인 독재에서, 민주정에 의한 다수의 독재로 전환한 것에 불과하다며 비판하였다.</p>
                 <ul class="list-unstyled">
-                    <li><strong>Compression level:</strong> Minified</li>
-                    <li><strong>Theme:</strong> Okaidia</li>
-                    <li><strong>Languages:</strong> Markup, CSS, C-like, JavaScript, PHP and Python</li>
+                    <li><strong>모든 사유 재산은 도둑질 한 것</strong>이다</li>
+                    <li><strong>“나는 가난하고, 가난한 자의 아들이다. 나는 가난한 이들과 일생을 보냈으며, 십중팔구는 가난하게 죽을 것이다.</strong></li>
                 </ul>
                 <div class="code-block">
                     <!--//Use Prismjs - http://prismjs.com/index.html#basic-usage -->
                     <pre><code class="language-markup">
-    &ltp class="my-style"&gt
-      Hello World!
-    &lt/p&gt
+    프랑스 대혁명을 왕정에 의한 1인 독재에서, 민주정에 의한 다수의 독재로 전환한 것에 불과하다며 비판하였다. 또한 정치제도에 대한 혁명은 이루어졌으나, 재산제도에는 손을 대지 않은 점에 대해서도 비판하였다.
                      </code></pre>
                 </div><!--//code-block-->
             </div><!--//block-->
