--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
             <div class="docs-inner">
             <h2 class="title text-center">Pierre-Joseph Proudhon</h2>            
             <div class="block">
-                <h3 class="sub-title text-center">피에르 조제프 프루동</h3>
+                <h3 class="sub-title text-center">피에르 조제프 프루동</h3><br>
                 <p><strong>프루동</strong> 1809년 1월 15일 ~ 1865년 1월 19일 </p>
                 <p><strong>프랑스 대혁명을 왕정에 의한 1인 독재에서, <br>민주정에 의한 다수의 독재로 전환한 것에 불과하다며 비판하였다.</strong></p>
                 <ul class="list-unstyled">
                     <li><strong>모든 사유 재산은 도둑질 한 것</strong>이다</li>
-                    <li><strong>“나는 가난하고, 가난한 자의 아들이다. 나는 가난한 이들과 일생을 보냈으며, 십중팔구는 가난하게 죽을 것이다.</strong></li>
+                    <li><strong>나는 가난하고, 가난한 자의 아들이다. 나는 가난한 이들과 일생을 보냈으며, 십중팔구는 가난하게 죽을 것이다.</strong></li>
                 </ul>
                 <div class="code-block">
                     <!--//Use Prismjs - http://prismjs.com/index.html#basic-usage -->
