--- a/index.html
+++ b/index.html
@@ -180,13 +180,14 @@
         <div class="container text-center">
             <h2 class="title">Features</h2>
             <ul class="feature-list list-unstyled">
-                <li><i class="fa fa-check"></i> 국회의원이 지금 도움이 되는 존재인가?</li>
-                <li><i class="fa fa-check"></i> 공무원 왜 책임이 없는가?</li>
-                <li><i class="fa fa-check"></i> 국회의원, 정치가는 잘못에 대해 책임이 없는가?</li>
-                <li><i class="fa fa-check"></i> 정부의 공무원이 장이 될 수 있는 방법은 없는가?</li>
+                <li><i class="fa fa-check"></i> 국회의원, 정치가, 공무원은 국가의 돈을 사익을 위해 노력하는 사람</li>
+                <li><i class="fa fa-check"></i> 언론은 밥벌이로 정치인과 공무원의 삥을 뜯는 사람</li>
+                <li><i class="fa fa-check"></i> 정치인이 우리에게 도움이 되는 존재인가?</li>
+                <li><i class="fa fa-check"></i> 정부의 공무원이 장이 될 수 있는 방법을 왜 막고 있나?</li>
                 <li><i class="fa fa-check"></i> 거리의 광장은 국회의원과 정치적 인간과 함께 해야 되는가?</li>
                 <li><i class="fa fa-check"></i> 유전무죄는 법 앞에 평등하지 않다는 것을 보여주고 있다</li>
                 <li><i class="fa fa-check"></i> 평등한 법 집행은 사법부에서 불가능한가?</li>
+                <li><i class="fa fa-check"></i> 물타기, 양비론을 펴지마라</li>
             </ul>
         </div><!--//container-->
     </section><!--//features-->
