--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <li><i class="fa fa-check"></i> 거리의 광장은 국회의원과 정치적 인간과 함께 해야 되는가?</li>
                 <li><i class="fa fa-check"></i> 유전무죄는 법 앞에 평등하지 않다는 것을 보여주고 있다</li>
                 <li><i class="fa fa-check"></i> 평등한 법 집행은 사법부에서 불가능한가?</li>
-                <li><i class="fa fa-check"></i> 물타기, 양비론을 펴지마라</li>
+                <li><i class="fa fa-check"></i> 양아치들아~ 물타기, 양비론을 펴지마라</li>
             </ul>
         </div><!--//container-->
     </section><!--//features-->
@@ -254,9 +254,15 @@
             </div><!--//block-->   
             <div class="block">
                 <h3 class="sub-title text-center">Full Documentation</h3>
-                <p>If your documentation is very long you can host the full docs page (including FAQ etc) on GitHub and provide a Call to Action button below to direct users there.</p>
+                <p>프루동이 "빈곤의 철학"이란 책을 쓰자, 마르크스가 이를 비꼬기 위해서 "철학의 빈곤"이라는 책을 썼다.</p>
+				<p>마르크스는 유복한 집안에서 자랐고, 귀족과 결혼했으나, 프루동은 가난한 제조공의 아들로 태어나서 재봉사와 결혼했다.</p>
+				<p>마르크스는 정치적 동지 엥겔스의 후원을 받아서, 그리 생계에는 곤란을 겪지 않았으나, 프루동은 죽을 때까지 끼니 걱정을 하며 살았다.</p>
+				<p>마르크스는 혁명에 의한 변화를 추구했으나, 프루동은 기존의 자본가 세력을 설득하여 제도적인 변화를 이끌어내고자 했다.</p>
+				<p>마르크스는 혁명의 과정에서 무산계급독재가 필연적임을 주장하였으나, 프루동은 거의 모든 권위심지어 법까지를 부정적으로 보았다.</p>
+				<p>마르크스는 체계적인 이론 정립에 집착하였으나, 프루동은 자신의 이론에 체계를 만드는 것을 거부하였다.</p>
+				<p>마르크스는 의외로 투옥된 적이 없다.대신 그의 후계자들이 대부분 감옥에서 썩었지. 프루동은 말년 대부분이 수배기간 아니면 투옥기간이었다.</p>
                 <p class="text-center">
-                    <a class="btn btn-cta-primary" href="https://github.com/twbs/bootstrap" target="_blank">More on GitHub</a>
+                    <a class="btn btn-cta-primary" href="https://namu.wiki/w/%ED%94%BC%EC%97%90%EB%A5%B4%20%EC%A1%B0%EC%A0%9C%ED%94%84%20%ED%94%84%EB%A3%A8%EB%8F%99?from=%ED%94%84%EB%A3%A8%EB%8F%99" target="_blank">More on Proudhon</a>
                 </p>
             </div><!--//block-->
             
