--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 </div><!--//code-block-->
             </div><!--//block-->   
             <div class="block">
-                <h3 class="sub-title text-center">Full Documentation</h3>
+                <h3 class="sub-title text-center">프르동과 마르크스</h3><br>
                 <p>프루동이 "빈곤의 철학"이란 책을 쓰자, <br>마르크스가 이를 비꼬기 위해서 "철학의 빈곤"이라는 책을 썼다.</p>
 				<p>마르크스는 유복한 집안에서 자랐고, 귀족과 결혼했으나, <br>프루동은 가난한 제조공의 아들로 태어나서 재봉사와 결혼했다.</p>
 				<p>마르크스는 정치적 동지 엥겔스의 후원을 받아서, 그리 생계에는 곤란을 겪지 않았으나, <br>프루동은 죽을 때까지 끼니 걱정을 하며 살았다.</p>
