--- a/index.html
+++ b/index.html
@@ -214,8 +214,27 @@
             </div><!--//block-->
             
             <div class="block">
-                <h3 class="sub-title text-center">CSS</h3>
-                <p>Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.</p>
+                <h3 class="sub-title text-center">프루동 생애</h3>
+                <p>스스로를 아나키스트라고 칭한 최초의 인물.<br>
+통 제조공의 아들로 태어났으며 9세 때 목동이 되었다. <br>
+중등학교는 다녔으나 경제적 부담으로 대학 입학 시험(바칼로레아)를 볼 수 없었다. <br>
+이 후, 인쇄소에서 기술을 배우면서 다양한 독서를 할 수 있었고,<br>
+라틴어, 그리스어, 히브리어를 독학하였다. 또한 많은 사회주의 지식인들과 친분을 쌓았다.<br>
+1838년 프루동은 장학금을 받아 대학교에 입학하였다.<br>
+그는 《소유란 무엇인가?》(What Is Property?)에서 소유를 도둑질이라고 규정하였으며 <br>
+《소유자에 대한 경고》로 인해 재판을 받았으나 석방되었다. 오오 19세기 프랑스의 위엄<br><br><br>
+
+1848년 혁명 이 후, 국회의원으로 선출되었으나 <br>
+〈민중〉(Le Peuple)지에 나폴레옹 3세를 비판하는 글을 썼다가<br>
+3년의 징역과 3,000프랑의 벌금을 선고받고 벨기에로 피신했다.<br>
+그는 파리에 돌아와 체포되어 생트펠라지 감옥에 투옥되어 1852년 석방됐다.<br>
+그는 생트펠라지에서 외프라지 피에가르(Euphrasie Piegard)와 결혼했으며<br>
+《혁명가의 고백》과 〈민중의 목소리〉를 썼으나 다시 기소되어 다른 감옥으로 이송된다.<br>
+그는 1858년 로마 가톨릭교회를 비판한《혁명과 교회의 정의론》으로 <br>
+다시 3년의 징역과 4,000프랑의 벌금을 선고받아<br>
+브뤼셀로 피신하여 이때 톨스토이를 만난다.<br>
+1862년 그는 파리로 돌아와서 《소유의 이론》과《노동계급의 정치적 역량에 대해서》를 썼다.<br>
+그는 1865년 갑작스럽게 사망한다.</p>
                 
                 <div class="code-block">
                     <!--//Use Prismjs - http://prismjs.com/index.html#basic-usage -->
@@ -260,7 +279,7 @@
 				<p>마르크스는 혁명에 의한 변화를 추구했으나, <br>프루동은 기존의 자본가 세력을 설득하여 제도적인 변화를 이끌어내고자 했다.</p>
 				<p>마르크스는 혁명의 과정에서 무산계급독재가 필연적임을 주장하였으나, <br>프루동은 거의 모든 권위심지어 법까지를 부정적으로 보았다.</p>
 				<p>마르크스는 체계적인 이론 정립에 집착하였으나, <br>프루동은 자신의 이론에 체계를 만드는 것을 거부하였다.</p>
-				<p>마르크스는 의외로 투옥된 적이 없다.대신 그의 후계자들이 대부분 감옥에서 썩었지. <br>프루동은 말년 대부분이 수배기간 아니면 투옥기간이었다.</p>
+				<p>마르크스는 의외로 투옥된 적이 없다.대신 그의 후계자들이 대부분 감옥에서 썩었지. <br>프루동은 말년 대부분이 수배기간 아니면 투옥기간이었다.</p><br>
                 <p class="text-center">
                     <a class="btn btn-cta-primary" href="https://namu.wiki/w/%ED%94%BC%EC%97%90%EB%A5%B4%20%EC%A1%B0%EC%A0%9C%ED%94%84%20%ED%94%84%EB%A3%A8%EB%8F%99?from=%ED%94%84%EB%A3%A8%EB%8F%99" target="_blank">More on Proudhon</a>
                 </p>
