--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             </div><!--//block-->
             
             <div class="block">
-                <h3 class="sub-title text-center">프루동 생애</h3>
+                <h3 class="sub-title text-center">프루동 생애</h3><br>
                 <p>스스로를 아나키스트라고 칭한 최초의 인물.<br>
 통 제조공의 아들로 태어났으며 9세 때 목동이 되었다. <br>
 중등학교는 다녔으나 경제적 부담으로 대학 입학 시험(바칼로레아)를 볼 수 없었다. <br>
@@ -234,7 +234,7 @@
 다시 3년의 징역과 4,000프랑의 벌금을 선고받아<br>
 브뤼셀로 피신하여 이때 톨스토이를 만난다.<br>
 1862년 그는 파리로 돌아와서 《소유의 이론》과《노동계급의 정치적 역량에 대해서》를 썼다.<br>
-그는 1865년 갑작스럽게 사망한다.</p>
+그는 1865년 갑작스럽게 사망한다.<br></p><br>
                 
                 <div class="code-block">
                     <!--//Use Prismjs - http://prismjs.com/index.html#basic-usage -->
