--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <!-- ******FEATURES****** --> 
     <section id="features" class="features section">
         <div class="container text-center">
-            <h2 class="title">Features</h2>
+            <h2 class="title">토론되지 않는 이상한 생각</h2>
             <ul class="feature-list list-unstyled">
                 <li><i class="fa fa-check"></i> 국회의원, 정치가, 공무원은 국가의 돈을 사익을 위해 노력하는 사람</li>
                 <li><i class="fa fa-check"></i> 언론은 밥벌이로 정치인과 공무원의 삥을 뜯는 사람</li>
@@ -186,8 +186,7 @@
                 <li><i class="fa fa-check"></i> 정부의 공무원이 장이 될 수 있는 방법을 왜 막고 있나?</li>
                 <li><i class="fa fa-check"></i> 거리의 광장은 국회의원과 정치적 인간과 함께 해야 되는가?</li>
                 <li><i class="fa fa-check"></i> 유전무죄는 법 앞에 평등하지 않다는 것을 보여주고 있다</li>
-                <li><i class="fa fa-check"></i> 평등한 법 집행은 사법부에서 불가능한가?</li>
-                <li><i class="fa fa-check"></i> 양아치들아~ 물타기, 양비론을 펴지마라</li>
+                <li><i class="fa fa-check"></i> 힘있는 자 앞에 불평등한 사법부는 어떻게 대체할 수 있나?</li>
             </ul>
         </div><!--//container-->
     </section><!--//features-->
