--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                         <i class="fa fa-heart"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">Designed for developers</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <h3 class="sub-title">김좌진 장군</h3>
+                        <p>만주 독립군에서 아나키스트들의 세력 확대를 경계한 볼셰비키(레닌-마르크스주의자) 파벌에게 암살당했다는 것이 중론. 당시 김좌진은 중국, 만주 지방에서 한국계 아나키스트들과 함께 한인 이상촌을 만드려는 시도를 거듭했다.</p>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -130,8 +130,8 @@
                         <i class="fa fa-clock-o"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">Time saver</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <h3 class="sub-title">단재(丹齋) 신채호</h3>
+                        <p>민족주의자라는 허울에 가려 잘 알려져 있지 않지만, 신채호도 아나키스트였다. 소설 "용과 용의 대격전"은 아나키즘의 절정이다.</p>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -139,8 +139,8 @@
                         <i class="fa fa-crosshairs"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">UX-centred</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <h3 class="sub-title">방준경</h3>
+                        <p>일제강점기~한국의 법조인. '김화산'이라는 필명으로 문학활동을 한 아나키스트이기도 하다. 카프 시절 아나키즘 논쟁의 불을 지폈으며, 아나키즘 문예이론을 정립했다.</p>
                     </div><!--//content-->
                 </div><!--//item-->           
                 <div class="clearfix visible-md"></div>    
@@ -149,8 +149,8 @@
                         <i class="fa fa-tablet"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">Mobile-friendly</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <h3 class="sub-title">고토쿠 슈스이</h3>
+                        <p>일본의 사회주의자이자 아나키스트. 러일전쟁, 제국주의, 조선 식민지화를 반대했으며, 노동조합운동과 민중연대를 주도했다. 동아시아에서 처음으로 '공산당선언'을 번역하여 소개했으며, '만국의 노동자여 단결하라(万国の労働者よ、団結せよ!)'라는 번역도 그의 작품이다. 덴노 암살을 모의했다는 죄목(대역 사건)으로 처형당했다</p>
                     </div><!--//content-->
                 </div><!--//item-->                
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -158,8 +158,8 @@
                         <i class="fa fa-code"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">Easy to customise</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <h3 class="sub-title">윌리엄 고드윈</h3>
+                        <p> 현대적인 개인주의 아나키즘의 효시격 되는 인물. 저서로는 '정치적 정의에 관한 고찰'등이 있다. 아나키즘을 윤리학, 정치학, 경제학적인 관점에서 정리하였다. 프랑켄슈타인의 저자 메리 셸리의 아버지이자 여성참정권을 처음으로 주장한 페미니즘의 선구자 메리 울스턴크래프트의 남편</p>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -167,8 +167,8 @@
                         <i class="fa fa-coffee"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">LESS files included</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <h3 class="sub-title">피에르 조제프 프루동</h3>
+                        <p>프랑스의 아나키스트. 그는 체계적인 이론을 거부했으며, 어떠한 분파를 만드는 것도 거부했다. 그래서인지 '역설의 사상가(a man of paradox)'라고 칭해질 정도로 모순적인 설명이 많다. 하지만 그가 처음으로 아나키즘이라는 단어를 사용했으며, 그의 사상은 근대 아나키즘 형성에 큰 영향을 끼쳤기에 '아나키즘의 아버지'라고 불린다.</p>
                     </div><!--//content-->
                 </div><!--//item-->               
             </div><!--//row-->            
