--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">김좌진 장군</h3>
-                        <p>만주 독립군에서 아나키스트들의 세력 확대를 경계한 볼셰비키(레닌-마르크스주의자) 파벌에게 암살당했다는 것이 중론. 당시 김좌진은 중국, 만주 지방에서 한국계 아나키스트들과 함께 한인 이상촌을 만드려는 시도를 거듭했다.</p>
+                        <p>만주 독립군에서 아나키스트들의 세력 확대를 경계한 볼셰비키(레닌-마르크스주의자) 파벌에게 암살당했다는 것이 중론. 당시 김좌진은 중국, 만주 지방에서 한국계 아나키스트들과 함께 한인 이상촌을 만드려는 시도</p>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12">
