--- a/index.html
+++ b/index.html
@@ -260,9 +260,22 @@
             <div class="block">
                 <h3 class="sub-title text-center">아나키스트 단체</h3>
                 <p></p>
-                <div class="code-block">
+                <div class="code-block"><br>
                     <pre><code class="language-javascript">
-    근대 아나키스트 저항단체들 : 진짜 아나키스트 반군들 근대의 막바지에 저물어가던 식민지 경제와 함께 막 나가던 초기 자본주의, 이에 대항하며 세력을 불린 공산주의, 나치즘과 파시즘 등 온갖 막장스런 전체주의에 염증을 느낀 지식인과 청년들이 만들어낸 아나키스트 저항군들이다. 본래 아나키즘은 골동품에 가깝게 묻혀버린 사상이었다. 그러나 이 시기에 크로포트킨, 미하일 바쿠닌과 같은 러시아 사상가들이 혁명적 아나키즘을 재발굴했고, 이는 유럽을 중심으로 지식인과 청년들에게 퍼져 나갔다. 이들은 전체주의에 대한 저항활동을 벌였다. 하지만 스페인 내전 당시 아나키스트 자치령 운동을 끝으로, 공산주의와 자본주의에게 밀리며 사라졌다. 사실상 러시아에서 시작된 이들은 맥이 끊겼다.
+    근대 아나키스트 저항단체들<br>
+	진짜 아나키스트 반군들 근대의 막바지에 저물어가던 <br>
+	식민지 경제와 함께 막 나가던 초기 자본주의, <br>
+	이에 대항하며 세력을 불린 공산주의, 나치즘과 파시즘 등 <br>
+	온갖 막장스런 전체주의에 염증을 느낀 <br>
+	지식인과 청년들이 만들어낸 아나키스트 저항군들이다. <br>
+	본래 아나키즘은 골동품에 가깝게 묻혀버린 사상이었다. <br>
+	그러나 이 시기에 크로포트킨, 미하일 바쿠닌과 같은 <br>
+	러시아 사상가들이 혁명적 아나키즘을 재발굴했고, <br>
+	이는 유럽을 중심으로 지식인과 청년들에게 퍼져 나갔다. <br>
+	이들은 전체주의에 대한 저항활동을 벌였다. <br>
+	하지만 스페인 내전 당시 아나키스트 자치령 운동을 끝으로, <br>
+	공산주의와 자본주의에게 밀리며 사라졌다. <br>
+	사실상 러시아에서 시작된 이들은 맥이 끊겼다.
                     </code></pre>
                 </div><!--//code-block-->
             </div><!--//block-->   
