--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="icon-holder">
                         <i class="fa fa-heart"></i>
                     </div>
-                    <div class="content">
+                    <div class="content" style="height:200px;">
                         <h3 class="sub-title">김좌진 장군</h3>
                         <p>만주 독립군에서 아나키스트들의 세력 확대를 경계한 볼셰비키(레닌-마르크스주의자) 파벌에게 암살당했다는 것이 중론. 당시 김좌진은 중국, 만주 지방에서 한국계 아나키스트들과 함께 한인 이상촌을 만드려는 시도</p>
                     </div><!--//content-->
