--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <div class="license-inner">
             <h2 class="title text-center">로고 (logo, Symbol)</h2>
                 <div class="info">
-                    <p style="align:center"><img src=anarchist.jpg></p>
+                    <center><p><img src=anarchist.jpg></p></center>
                 </div><!--//info-->
             </div><!--//license-inner-->
         </div><!--//container-->
