--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">고토쿠 슈스이</h3>
-                        <p>일본의 사회주의자이자 아나키스트. 러일전쟁, 제국주의, 조선 식민지화를 반대했으며, 노동조합운동과 민중연대를 주도했다. 동아시아에서 처음으로 '공산당선언'을 번역하여 소개했으며, '만국의 노동자여 단결하라(万国の労働者よ、団結せよ!)'라는 번역도 그의 작품이다. 덴노 암살을 모의했다는 죄목(대역 사건)으로 처형당했다</p>
+                        <p>일본의 사회주의자이자 아나키스트. 러일전쟁, 제국주의, 조선 식민지화를 반대했으며, 노동조합운동과 민중연대를 주도했다. 덴노 암살을 모의했다는 죄목(대역 사건)으로 처형당했다</p>
                     </div><!--//content-->
                 </div><!--//item-->                
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -168,7 +168,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">피에르 조제프 프루동</h3>
-                        <p>프랑스의 아나키스트. 그는 체계적인 이론을 거부했으며, 어떠한 분파를 만드는 것도 거부했다. 그래서인지 '역설의 사상가(a man of paradox)'라고 칭해질 정도로 모순적인 설명이 많다. 하지만 그가 처음으로 아나키즘이라는 단어를 사용했으며, 그의 사상은 근대 아나키즘 형성에 큰 영향을 끼쳤기에 '아나키즘의 아버지'라고 불린다.</p>
+                        <p>프랑스의 아나키스트. 그는 체계적인 이론을 거부했으며, 어떠한 분파를 만드는 것도 거부했다. 그래서인지 '역설의 사상가(a man of paradox)'라고 칭해질 정도로 모순적인 설명이 많다. 근대 아나키즘 형성에 큰 영향을 끼쳤기에 '아나키즘의 아버지'라고 불린다.</p>
                     </div><!--//content-->
                 </div><!--//item-->               
             </div><!--//row-->            
