--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">윌리엄 고드윈</h3>
-                        <p> 현대적인 개인주의 아나키즘의 효시격 되는 인물. 저서로는 '정치적 정의에 관한 고찰'등이 있다. 아나키즘을 윤리학, 정치학, 경제학적인 관점에서 정리하였다. 프랑켄슈타인의 저자 메리 셸리의 아버지이자 여성참정권을 처음으로 주장한 페미니즘의 선구자 메리 울스턴크래프트의 남편</p>
+                        <p> 현대적인 개인주의 아나키즘의 효시격 되는 인물. 저서로는 '정치적 정의에 관한 고찰'등이 있다. 아나키즘을 윤리학, 정치학, 경제학적인 관점에서 정리하였다. </p>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12">
