--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <li class="nav-item"><a class="scrollto" href="#about">About</a></li>
                         <li class="nav-item"><a class="scrollto" href="#features">Features</a></li>
                         <li class="nav-item"><a class="scrollto" href="#docs">Proudhon</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#license">License</a></li>                        
+                        <li class="nav-item"><a class="scrollto" href="#license">Symbol</a></li>                        
                         <li class="nav-item last"><a class="scrollto" href="#contact">Contact</a></li>
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
@@ -293,21 +293,14 @@
         <div class="container">
             <div class="contact-inner">
                 <h2 class="title  text-center">Contact</h2>
-                <p class="intro  text-center">I hope you find this Bootstrap template useful. <br />Feel free to get in touch if you have any questions or suggestions.</p>
+                <p class="intro  text-center">이 내용은 개인적인 생각을 적은 것으로 별도의 수신을 받지 않습니다</p>
                 <div class="author-message">                      
                     <div class="profile">
                         <img class="img-responsive" src="assets/images/profile.png" alt="" />
                     </div><!--//profile-->
                     <div class="speech-bubble">
-                        <h3 class="sub-title">Want to get more freebies in the future?</h3>
-                        <p>I tweet about #UX and #webdev related resources/content at <a href="https://twitter.com/3rdwave_themes" target="_blank">@3rdwave_themes</a> 
-                        <p>If you like what I do, you can follow me on twitter and I will keep you informed about my next free template there :)</p>
-                        <p><strong>[Tip for developers]:</strong> If you take on freelance work you can put a tailored message here about your availability to attract potential clients. Be creative and good luck!</p> 
-                        <div class="source">
-                            <span class="name"><a href="https://twitter.com/3rdwave_themes" target="_blank">Xiaoying Riley</a></span>
-                            <br />
-                            <span class="title">UX/UI Designer</span>
-                        </div><!--//source-->
+                        <h3 class="sub-title">국회의원에 대한 개인적인 생각</h3>
+                        <p>언론의 내용을 보며 많은 적폐 청산이라는 말을 듣습니다. 적폐의 대상(개인적으로 국회의원이 1위)이 언론에 나와 적폐 청산을 하겠다는 것과 촛불, 태극기 시위에 적폐 대상(국회의원)들이 나와서 적폐 대상인 언론이 전하는 것을 듣고 있노라면 울분이 터집니다</p> 
                     </div><!--//speech-bubble-->                        
                 </div><!--//author-message-->
                 <div class="clearfix"></div>
