--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     </div><!--//profile-->
                     <div class="speech-bubble">
                         <h3 class="sub-title">국회의원에 대한 개인적인 생각</h3>
-                        <p>언론의 내용을 보며 많은 적폐 청산이라는 말을 듣습니다. 적폐의 대상(개인적으로 국회의원이 1위)이 언론에 나와 적폐 청산을 하겠다는 것과 촛불, 태극기 시위에 적폐 대상(국회의원)들이 나와서 적폐 대상인 언론이 전하는 것을 듣고 있노라면 울분이 터집니다</p> 
+                        <p>언론의 내용을 보며 많은 적폐 청산이라는 말을 듣습니다. 적폐의 대상(개인적으로 국회의원이 1위)이 언론에 나와 적폐 청산을 하겠다는 것과 촛불, 태극기 시위에 적폐 대상(국회의원)들이 참가하여 언론(적폐의 대상 2위)이 전하는 것을 듣고 있노라면 울분이 터집니다</p> 
                     </div><!--//speech-bubble-->                        
                 </div><!--//author-message-->
                 <div class="clearfix"></div>
