--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
                 <a class="btn btn-cta-primary" href="https://github.com/kranarchist/kranarchist.github.io" target="_blank">Git 사용법</a>
             </div>
             <ul class="meta list-inline">
-                <li><a href="#" target="_blank">View on GitHub</a></li>
-                <li><a href="https://github.com/twbs/bootstrap" target="_blank">Full Documentation</a></li>
-                <li>Created by: <a href="http://themes.3rdwavemedia.com/" target="_blank">Xiaoying Riley</a> at 3rd Wave Media</li>
+                <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+                <li>Created by: <a href="http://themes.3rdwavemedia.com/" target="_blank">Anarchist</a></li>
             </ul><!--//meta-->
         </div><!--//container-->
         <div class="social-media">
             <div class="social-media-inner container text-center">
                 <ul class="list-inline">
+				    <li> 홈페이지 템블릿 제작자 정보</li>
                     <li class="twitter-follow"><a href="https://twitter.com/3rdwave_themes" class="twitter-follow-button" data-show-count="false">Follow @3rdwave_themes</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                     </li><!--//twitter-follow-->
@@ -305,7 +305,7 @@
                 </div><!--//author-message-->
                 <div class="clearfix"></div>
                 <div class="info text-center">
-                    <h4 class="sub-title">Get Connected</h4>
+                    <h4 class="sub-title">홈페이지 템플릿(CSS) 제작자 정보</h4>
                     <ul class="social-icons list-inline">
                         <li><a href="https://twitter.com/3rdwave_themes" target="_blank"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="https://www.facebook.com/3rdwavethemes" target="_blank"><i class="fa fa-facebook"></i></a></li>
