--- a/index.html
+++ b/index.html
@@ -369,6 +369,8 @@
     <script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script> 
     <script type="text/javascript" src="assets/plugins/prism/prism.js"></script>    
     <script type="text/javascript" src="assets/js/main.js"></script>       
+
+	<script id="dsq-count-scr" src="//anarchist-1.disqus.com/count.js" async></script>
 </body>
 </html> 
 
