--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@
     <section id="talk" class="talk">
 	    <br>
         <div class="container">
-            <h2 class="title text-center">국회위원 없이 국가가 힘든가?</h2><br>
+            <h2 class="title text-center">국회위원 없이 국가가 존립하기 힘든가?</h2><br>
             <p class="intro text-center">개인적으로는 국회의원(대통령포함)을 포함한 정치인이 국가를 좀 먹는다고 생각합니다 
-			<br>이 다음 청산의 대상으로 국회의원제도 폐지를 원합니다 <br>국회의원이 없으면 대한민국 공무원에 의해 대한민국이 시스템적으로 돌아간다는 것은 힘들까요?</p>
+			<br>이 다음 청산의 대상으로 국회의원제도 폐지를 원합니다 <br>국회의원이 없으면 대한민국 공무원에 의해 대한민국이 시스템적으로 돌아간다는 것은 힘들까요?<br>개인적으로는 국회위원이 꼭 필요하다면 법을 만드는 일만 시켰으면 좋겠습니다.<br>예산에 대한 결정은 별도 시스템으로 만들어 견제와 감시가 진행해야 한다고 생각합니다 ㅠㅠ</p>
 
 			<div id="disqus_thread"></div>
 			<script>
