change logo location

--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
         <div class="container">
             <div class="license-inner">
             <h2 class="title text-center">로고 (logo, Symbol)</h2>
-                <div class="info">
-                    <center><p><img src=anarchist.jpg></p></center>
+                <div class="info" style="align:center;">
+                    <p><img src=anarchist.jpg></p>
                 </div><!--//info-->
             </div><!--//license-inner-->
         </div><!--//container-->
